--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -143,7 +143,39 @@
 
     <ImageView
         android:layout_marginTop="3dp"
-        android:id="@+id/productImages"
+        android:id="@+id/productImage0"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:scaleType="centerCrop"
+        tools:srcCompat="@tools:sample/avatars" />
+
+    <ImageView
+        android:layout_marginTop="3dp"
+        android:id="@+id/productImage1"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:scaleType="centerCrop"
+        tools:srcCompat="@tools:sample/avatars" />
+
+    <ImageView
+        android:layout_marginTop="3dp"
+        android:id="@+id/productImage2"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:scaleType="centerCrop"
+        tools:srcCompat="@tools:sample/avatars" />
+
+    <ImageView
+        android:layout_marginTop="3dp"
+        android:id="@+id/productImage3"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:scaleType="centerCrop"
+        tools:srcCompat="@tools:sample/avatars" />
+
+    <ImageView
+        android:layout_marginTop="3dp"
+        android:id="@+id/productImage4"
         android:layout_width="match_parent"
         android:layout_height="250dp"
         android:scaleType="centerCrop"
