--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -10,7 +10,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".ProductDetails">
+    tools:context=".activities.ProductDetails">
 
 
     <ImageView
@@ -95,6 +95,19 @@
                 android:layout_gravity="start"
                 android:layout_margin="5dp"
                 android:text="@string/rating"
+                />
+
+            <RatingBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/productRatingBar"
+                android:layout_gravity="start"
+                android:numStars="5"
+                android:stepSize="0.5"
+                android:rating="2.5"
+                android:isIndicator="false"
+                android:progressTint="#03A9F4"
+                android:progressBackgroundTint="@color/black"
                 />
 
             <TextView
